# flights-search-agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/amadeus/infrastructure/: amadeus_client.py
src/flights/application/: search_flights.py
src/flights/domain/: flights_entities.py  flights_repository.py
src/flights/infrastructure/: search_flights_repository.py  search_flights_tools.py
src/llms/application/: get_chain.py
src/llms/domain/: llm_client.py  llm_entities.py  llm_service.py
src/llms/infrastructure/: google_client.py  google_service.py
src/locations/application/: search_locations.py
src/locations/domain/: location_entities.py  location_repository.py
src/locations/infrastructure/: search_locations_repository.py  search_locations_tools.py
src/observability/infrastructure/: langfuse_client.py
src/shared/: config.py  logging.py  rate_limiter.py
src/travel_agent/application/: conditions.py  graph.py  nodes.py  state.py
src/travel_agent/domain/: entities.py  prompts.py  travel_entities.py
src/travel_agent/infrastructure/: dependency_injection.py  graph_factory.py  workflow_factory.py
src/web_api/domain/: entities.py
src/web_api/infrastructure/: fastapi_app.py  handle_request.py
