[project]
name = "flightsearchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.0",
    "ipykernel>=7.0.1",
    "jinja2>=3.1.6",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langfuse>=3.8.1",
    "langgraph>=1.0.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]
